--- a/install
+++ b/install
@@ -1,3 +1,3 @@
 #!/bin/bash
-git clone --recursive https://gitlab.com/notproperlycut/vim-config.git ${HOME}/.vim
+git clone --recursive https://github.com/notproperlycut/vim-config.git ${HOME}/.vim
 ${HOME}/.vim/link
